--- a/sample/cubic-bezier-editor.html
+++ b/sample/cubic-bezier-editor.html
@@ -11,7 +11,7 @@
     <script type="text/javascript" src="../addon/cubic-bezier/cubic-bezier.js" ></script>
 
 </head>
-<body>
+<body style="height:100vh;">
 
 
 <script type="text/javascript">
